<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:maxHeight="@dimen/four_hundred_dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <androidx.cardview.widget.CardView
            android:id="@+id/action_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/eighty_dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/thirty_dp"
            app:cardElevation="@dimen/five_dp"
            app:cardUseCompatPadding="true"
            app:contentPaddingLeft="@dimen/ten_dp"
            app:contentPaddingRight="@dimen/ten_dp"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/propertyNameConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginBottom="@dimen/ten_dp">


                <TextView
                    android:id="@+id/propertyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:text="@string/property_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Property Name" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five_dp"
                    android:layout_marginEnd="@dimen/five_dp"

                    android:clickable="true"

                    android:src="@drawable/ic_baseline_cancel_24"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_name_input_layout"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/thirty_dp"
                    app:hintEnabled="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/propertyName">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/propertyNameEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_background"
                        android:cursorVisible="true"
                        android:imeOptions="actionNext"
                        android:maxLines="2"
                        android:paddingStart="@dimen/five_dp"
                        android:paddingTop="@dimen/five_dp"
                        android:paddingEnd="@dimen/five_dp"
                        android:textSize="@dimen/twenty_sp"
                        tools:hint="@string/property_name_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/propertyCoordinates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/thirty_dp"
                    android:text="@string/property_coordinates"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/property_name_input_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/property_coordinates_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/hundred_dp"
                    android:layout_marginTop="@dimen/thirty_dp"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    app:layout_constraintTop_toBottomOf="@id/propertyCoordinates">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/propertyCoordinatesEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edittext_background"
                        android:enabled="false"
                        android:focusable="true"
                        android:gravity="start"
                        android:imeOptions="actionNext"
                        android:paddingStart="@dimen/five_dp"
                        android:paddingTop="@dimen/ten_dp"
                        android:paddingEnd="@dimen/five_dp"
                        android:maxLines="2"

                        tools:hint="@string/property_coordinates_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/thirty_dp"
                    android:layout_marginTop="@dimen/thirty_dp"
                    android:layout_marginRight="@dimen/thirty_dp"
                    android:background="@drawable/button_background"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/property_coordinates_input_layout" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>